Fix samp overflow issue

--- a/html.digital/css/general/_typography.scss
+++ b/html.digital/css/general/_typography.scss
@@ -27,7 +27,6 @@ samp {
   word-break: normal;
   word-wrap: normal;
   white-space: pre;
-  overflow-y: scroll;
 }
 
 h1,
